--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
     padding: 0;
     margin: 0;
   }
+  
+  .red{
+    background-color: rgb(20, 49, 87);
+    color: white;
+  }
 
   a{
     text-decoration: none;
