--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,3 +43,62 @@ li{
 a li{
   color: white;
 }
+
+
+.sidebar-toggle {
+  font-size: 24px;
+  color: white;
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+
+.sidebar {
+  background-color: #333;
+  color: white;
+  width: 135px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: -250px; /* Hidden by default */
+  padding-top: 7px; /* Add some padding to account for the fixed navbar */
+  transition: 0.3s;
+  z-index: 999;
+}
+
+.sidebar .sidebar-tgl{
+  margin-left: 20px;
+  margin-bottom: 8px;
+  font-size: 24px;
+  width: 30px;
+}
+
+.sidebar-link {
+  display: block;
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+  padding: 8px 0;
+}
+
+
+.sidebar-link:hover {
+  background-color: #575757;
+}
+
+.sidebar.active {
+  left: 0; /* Show sidebar */
+}
+
+.content {
+  margin-left: 20px;
+  padding-top: 70px; /* Add some padding to account for the fixed navbar */
+  width: 100%;
+  transition: margin-left 0.3s;
+}
+
+.content.shifted {
+  margin-left: 270px; /* Shift content when sidebar is visible */
+}
