--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -1,18 +1,12 @@
-.signup-container {
-  height: 100%;
-  margin: auto 30%;
-  margin-top: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-}
 
 .signup-container {
+  display: flex;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  margin: 5% 30%;
   width: 100%;
   max-width: 400px;
-  padding: 20px;
+  padding: 15px 5px;
   background-color: #0c181b;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -37,23 +31,35 @@
 
 
 .form-group label {
+  width: 100%;
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
   color: white;
 }
 
+
+.err-list{
+  color: red;
+}
+
+.err-list li{
+  margin: 3px 0;
+  padding: 3px;
+  text-align: center;
+}
+
 .form-group p{
   margin-top: 10px;
-  color: white;
+  color: red;
 }
 
 .form-group a{
   color: rgb(134, 64, 225);
 }
 
-.form-group input {
-  width: 100%;
+.signup-container input {
+  width: 105%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
